--- a/adspolicy.html
+++ b/adspolicy.html
@@ -94,14 +94,11 @@
       If you have any questions, concerns, or requests regarding this Ads Policy or our advertising practices, please contact us at:
     </p>
     <ul>
-      <li><strong>Email:</strong> <a href="mailto:your.email@example.com">your.email@example.com</a></li>
-      <li><strong>Address:</strong> [Your Company/Developer Address]</li>
-      <li><strong>Phone:</strong> [Your Contact Phone Number, if applicable]</li>
+      <li><strong>Email:</strong> <a href="mailto:info@limecrawnstudio.com">info@limecrawnstudio.com</a></li>
+   
     </ul>
     
-    <p>
-      <em>Disclaimer:</em> This Ads Policy is a sample template and may not reflect the current legal requirements applicable to your business. You should tailor the content to accurately describe your ad practices and consult with a qualified attorney to ensure compliance with all relevant laws and regulations.
-    </p>
+  
   </div>
 </body>
 </html>
